src/ic-cdk-macros/tests/compile_fail/only_function.rs
use ic_cdk_macros::query;

#[query]
struct S;

fn main() {}
